fix: webfont設定を調整

--- a/assets/styles/_font.scss
+++ b/assets/styles/_font.scss
@@ -21,34 +21,38 @@
 @font-face {
   font-family: YakuHanJP;
   font-weight: normal;
-  src: url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-DemiLight.woff2") format("woff2"),
-       url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-DemiLight.woff") format("woff");
+  font-display: optional;
+  src: url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-DemiLight.woff2?ver=1.4.0") format("woff2"),
+       url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-DemiLight.woff?ver=1.4.0") format("woff");
 }
 
 @font-face {
   font-family: YakuHanJP;
   font-weight: bold;
-  src: url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-Bold.woff2") format("woff2"),
-       url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-Bold.woff") format("woff");
+  font-display: optional;
+  src: url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-Bold.woff2?ver=1.4.0") format("woff2"),
+       url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-Bold.woff?ver=1.4.0") format("woff");
 }
 
 // Noto Sans Japanese
 @font-face {
   font-family: "Noto Sans Japanese";
   font-weight: normal;
+  font-display: optional;
   src: local("Noto Sans CJK JP DemiLight"),
        local("NotoSansCJKjp-DemiLight"),
-       url("../fonts/NotoSansCJKjp-DemiLight.woff2") format("woff2"),
-       url("../fonts/NotoSansCJKjp-DemiLight.woff") format("woff");
+       url("../fonts/NotoSansCJKjp-DemiLight.woff2?ver=1.4.0") format("woff2"),
+       url("../fonts/NotoSansCJKjp-DemiLight.woff?ver=1.4.0") format("woff");
 }
 
 @font-face {
   font-family: "Noto Sans Japanese";
   font-weight: bold;
+  font-display: optional;
   src: local("Noto Sans CJK JP Bold"),
        local("NotoSansCJKjp-Bold"),
-       url("../fonts/NotoSansCJKjp-Bold.woff2") format("woff2"),
-       url("../fonts/NotoSansCJKjp-Bold.woff") format("woff");
+       url("../fonts/NotoSansCJKjp-Bold.woff2?ver=1.4.0") format("woff2"),
+       url("../fonts/NotoSansCJKjp-Bold.woff?ver=1.4.0") format("woff");
 }
 
 // icon font
