--- a/assets/styles/config/_variables.scss
+++ b/assets/styles/config/_variables.scss
@@ -2,7 +2,7 @@
 // Font
 // -------------------------
 
-$font-family-base:        YakuHanJPs, -apple-system-subset, BlinkMacSystemFont, "Noto Sans Japanese", "Yu Gothic", YuGothic, "Hiragino Kaku Gothic ProN", Meiryo, Emoji, sans-serif !default;
+$font-family-base:        YakuHanJPs, "Noto Sans Japanese", -apple-system-subset, BlinkMacSystemFont, "Yu Gothic", YuGothic, "Hiragino Kaku Gothic ProN", Meiryo, Emoji, sans-serif !default;
 $font-family-monospace:   Consolas, "Liberation Mono", Menlo, Courier, Emoji, monospace !default;
 $font-weight-base:        normal;
 
