--- a/assets/styles/_font.scss
+++ b/assets/styles/_font.scss
@@ -66,8 +66,7 @@
        url('../fonts/icon.svg#icon') format('svg');
 }
 
-.icon-keyboard_arrow_right,
-.icon-open_in_new {
+.icon-keyboard_arrow_right {
   width: 1rem;
   height: 1rem;
   color: inherit;
@@ -89,10 +88,5 @@
 .icon-keyboard_arrow_right {
   &::before {
     content: "\e907";
-  }
-}
-.icon-open_in_new {
-  &::before {
-    content: "\e90b";
   }
 }
