--- a/assets/styles/base/_type.scss
+++ b/assets/styles/base/_type.scss
@@ -3,31 +3,30 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  margin-top: $font-size-h1;
-  margin-bottom: 1.5rem;
+  margin: $font-size-h1 0 ($font-size-h1 * 0.8);
   color: $font-color-h1;
   font-size: $font-size-h1;
+  line-height: $font-size-h1 * 1.8;
 }
 
 h2 {
-  margin-top: $font-size-h2;
-  margin-bottom: 1rem;
+  margin: $font-size-h2 0 ($font-size-h2 * 0.8);
   color: $font-color-h2;
   font-size: $font-size-h2;
+  line-height: $font-size-h2 * 1.8;
 }
 
 h3 {
-  margin-top: $font-size-h3;
-  margin-bottom: .5rem;
+  margin: $font-size-h3 0 ($font-size-h3 * 0.8);
   color: $font-color-h3;
   font-size: $font-size-h3;
+  line-height: $font-size-h3 * 1.8;
 }
 
 h4,
 h5,
 h6 {
-  margin-top: 1rem;
-  margin-bottom: .5rem;
+  margin: 1rem 0 .8rem;
 }
 
 h4 {
