--- a/src/assets/styles/base/_utility.scss
+++ b/src/assets/styles/base/_utility.scss
@@ -24,7 +24,7 @@
     content: "";
     display: inline-block;
     background: url('../images/icon/open_in_new.svg') no-repeat;
-    background-size: 1rem;
+    background-size: contain;
     width: 1rem;
     height: 1rem;
   }
