remove: webfont woff

--- a/src/assets/styles/_font.scss
+++ b/src/assets/styles/_font.scss
@@ -22,15 +22,13 @@
   font-family: YakuHanJP;
   font-weight: normal;
   font-display: optional;
-  src: url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-DemiLight.woff2?ver=1.4.0") format("woff2"),
-       url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-DemiLight.woff?ver=1.4.0") format("woff");
+  src: url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-DemiLight.woff2?ver=1.4.0") format("woff2");
 }
 
 @font-face {
   font-family: YakuHanJP;
   font-weight: bold;
-  src: url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-Bold.woff2?ver=1.4.0") format("woff2"),
-       url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-Bold.woff?ver=1.4.0") format("woff");
+  src: url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-Bold.woff2?ver=1.4.0") format("woff2");
 }
 
 // Noto Sans Japanese
@@ -39,8 +37,7 @@
   font-weight: normal;
   src: local("Noto Sans CJK JP DemiLight"),
        local("NotoSansCJKjp-DemiLight"),
-       url("../fonts/NotoSansCJKjp-DemiLight.woff2?ver=1.4.0") format("woff2"),
-       url("../fonts/NotoSansCJKjp-DemiLight.woff?ver=1.4.0") format("woff");
+       url("../fonts/NotoSansCJKjp-DemiLight.woff2?ver=1.4.0") format("woff2");
 }
 
 @font-face {
@@ -48,6 +45,5 @@
   font-weight: bold;
   src: local("Noto Sans CJK JP Bold"),
        local("NotoSansCJKjp-Bold"),
-       url("../fonts/NotoSansCJKjp-Bold.woff2?ver=1.4.0") format("woff2"),
-       url("../fonts/NotoSansCJKjp-Bold.woff?ver=1.4.0") format("woff");
+       url("../fonts/NotoSansCJKjp-Bold.woff2?ver=1.4.0") format("woff2");
 }
