add: svn-icon mixin

--- a/src/assets/styles/config/_mixins.scss
+++ b/src/assets/styles/config/_mixins.scss
@@ -64,3 +64,15 @@
   white-space: nowrap;
   overflow: hidden;
 }
+
+@mixin svn-icon($size, $icon-color) {
+  display: inline-block;
+  width: $size;
+  height: $size;
+  vertical-align: middle;
+
+  svg {
+    display: block;
+    fill: $icon-color;
+  }
+}
