fix: line-height

--- a/src/assets/styles/config/_variables.scss
+++ b/src/assets/styles/config/_variables.scss
@@ -11,7 +11,7 @@ $font-size-lg:            1.0625rem;
 $font-size-sm:            .9375rem;
 $font-size-xs:            .875rem;
 
-$line-height-base:        2rem;
+$line-height-base:        2;
 
 $font-size-h1:            2rem;
 $font-size-h2:            1.5rem;
