--- a/src/assets/styles/config/_mixins.scss
+++ b/src/assets/styles/config/_mixins.scss
@@ -1,3 +1,14 @@
+// selection
+
+@mixin selection {
+	& ::selection {
+		@content;
+	}
+	& ::-moz-selection {
+		@content;
+	}
+}
+
 // Responsiveness
 
 @mixin from($device) {
