--- a/src/assets/styles/base/_utility.scss
+++ b/src/assets/styles/base/_utility.scss
@@ -20,12 +20,12 @@
 
 // icon
 .icon-open_in_new {
-  &::before {
-    content: "";
+  &::after {
     display: inline-block;
-    background: url('../images/icon/open_in_new.svg') no-repeat;
-    background-size: contain;
     width: 1rem;
     height: 1rem;
+    background: url('../images/icon/open_in_new.svg') no-repeat;
+    background-size: contain;
+    content: "";
   }
 }
