--- a/src/assets/styles/base/_type.scss
+++ b/src/assets/styles/base/_type.scss
@@ -56,8 +56,8 @@ p {
   margin: 0;
   padding: .2rem 0;
   border-radius: $radius-base;
-  background: $blue-50;
-  color: $blue-400;
+  background: $grey-100;
+  color: $grey-600;
   font-size: $font-size-sm;
   line-height: 2;
 
