--- a/src/assets/styles/parts/_mokuji.scss
+++ b/src/assets/styles/parts/_mokuji.scss
@@ -1,7 +1,7 @@
 .mokuji-container {
   margin: 2rem 0;
   padding: .5rem 1.5rem;
-  border-left: 3px solid $blue-100;
+  border-left: 3px solid $grey-300;
 }
 
 .mokuji-title {
