--- a/src/assets/styles/_font.scss
+++ b/src/assets/styles/_font.scss
@@ -1,33 +1,15 @@
-// subset -apple-system
-@font-face {
-  font-family: "-apple-system-subset";
-  src: local(-apple-system);
-  unicode-range: U+0000-05C7;
-}
-
-// Emoji
-// @link https://hail2u.net/blog/webdesign/emoji-shotcut-family.html
-@font-face {
-  font-family: 'Emoji';
-  src: local('Apple Color Emoji'),
-       local('Gecko Emoji'),
-       local('Noto Sans Emoji'),
-       local('Segoe UI Emoji'),
-       local('Segoe UI Symbol'),
-       local('Noto Sans Symbols');
-}
-
 // YakuHanJPs
 @font-face {
   font-family: YakuHanJP;
   font-weight: normal;
-  font-display: optional;
+  font-display: swap;
   src: url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-DemiLight.woff2?ver=1.4.0") format("woff2");
 }
 
 @font-face {
   font-family: YakuHanJP;
   font-weight: bold;
+  font-display: swap;
   src: url("~yakuhanjp/dist/fonts/YakuHanJP/YakuHanJP-Bold.woff2?ver=1.4.0") format("woff2");
 }
 
@@ -35,6 +17,7 @@
 @font-face {
   font-family: "Noto Sans Japanese";
   font-weight: normal;
+  font-display: swap;
   src: local("Noto Sans CJK JP DemiLight"),
        local("NotoSansCJKjp-DemiLight"),
        url("../fonts/NotoSansCJKjp-DemiLight.woff2?ver=1.4.0") format("woff2");
@@ -43,6 +26,7 @@
 @font-face {
   font-family: "Noto Sans Japanese";
   font-weight: bold;
+  font-display: swap;
   src: local("Noto Sans CJK JP Bold"),
        local("NotoSansCJKjp-Bold"),
        url("../fonts/NotoSansCJKjp-Bold.woff2?ver=1.4.0") format("woff2");
