--- a/src/assets/styles/base/_global.scss
+++ b/src/assets/styles/base/_global.scss
@@ -37,7 +37,7 @@ body {
 
 // Links
 a {
-  transition: color .3s ease, border .3s ease, background .3s $animation-curve-fast-out-slow-in, opacity .3s ease;
+  transition: color .3s ease, border .4s linear, background .3s $animation-curve-fast-out-slow-in, opacity .3s ease;
   color: $link-color;
   text-decoration: none;
 
