--- a/src/assets/styles/config/_variables.scss
+++ b/src/assets/styles/config/_variables.scss
@@ -47,10 +47,11 @@ $article-padding-side:     1.5rem;
 // Colors
 // -------------------------
 
-$link-color:            $blue-A200;
-$link-hover-color:      $blue-A400;
-$link-visit-color:      $light-blue-A100;
-$link-border-color:     $blue-100;
+$link-color:                  $grey-500;
+$link-hover-color:            $grey-600;
+$link-border-color:           $grey-400;
+$link-hover-border-color:     $grey-500;
+$link-visited-color:          $grey-300;
 
 $table-head-bg-color:    $grey-100;
 $table-border-color:     $grey-200;
