fix: スタイル調整

--- a/src/assets/styles/parts/_mokuji.scss
+++ b/src/assets/styles/parts/_mokuji.scss
@@ -1,14 +1,14 @@
 .mokuji-container {
   margin: 2rem 0;
-  padding: .5rem 1.5rem;
-  border-left: 3px solid $grey-300;
+  padding: 1rem 2rem;
+  border-left: .2rem solid $grey-300;
 }
 
 .mokuji-title {
   display: block;
   margin-bottom: .5rem;
   color: $font-color-h2;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
