--- a/src/assets/styles/base/_type.scss
+++ b/src/assets/styles/base/_type.scss
@@ -47,7 +47,7 @@ h6 {
 p {
   margin-bottom: 2rem;
   letter-spacing: .03rem;
-  line-height: 2rem;
+  line-height: 2.15;
   text-align: justify;
   word-break: break-all;
 }
