fix: ローディング中にスクロールを固定する

--- a/src/assets/styles/base/_utility.scss
+++ b/src/assets/styles/base/_utility.scss
@@ -2,6 +2,14 @@
   display: none !important;
 }
 
+html {
+  &.lock-scroll,
+  &.lock-scroll body {
+    height: 100%;
+    overflow: hidden;
+  }
+}
+
 .element-hide {
   display: none !important;
 }
