--- a/src/assets/styles/config/_colors.scss
+++ b/src/assets/styles/config/_colors.scss
@@ -3,16 +3,16 @@ $black: #010101;
 $white: #fefefe;
 
 // grey
-$grey-50:  #fafafa;
-$grey-100: #f5f5f5;
-$grey-200: #eee;
-$grey-300: #e0e0e0;
-$grey-400: #bdbdbd;
-$grey-500: #9e9e9e;
-$grey-600: #757575;
-$grey-700: #616161;
-$grey-800: #424242;
-$grey-900: #212121;
+$grey-50:  #f8f9fa;
+$grey-100: #f1f3f5;
+$grey-200: #e9ecef;
+$grey-300: #dee2e6;
+$grey-400: #ced4da;
+$grey-500: #adb5bd;
+$grey-600: #868e96;
+$grey-700: #495057;
+$grey-800: #343a40;
+$grey-900: #212529;
 
 // red
 $red-50:  #ffebee;
