fix: Archiveスタイル適応

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -18,6 +18,7 @@
 
 // parts
 @import "parts/alert";
+@import "parts/entry";
 @import "parts/mokuji";
 @import "parts/sandbox";
 @import "parts/text";
