add: wpstats hidden style

--- a/src/assets/styles/base/_utility.scss
+++ b/src/assets/styles/base/_utility.scss
@@ -2,6 +2,11 @@
   display: none !important;
 }
 
+// WordPress
+#wpstats {
+  display: none;
+}
+
 html {
   &.lock-scroll,
   &.lock-scroll body {
