fix: font-weight調整

--- a/src/assets/styles/base/_type.scss
+++ b/src/assets/styles/base/_type.scss
@@ -6,6 +6,7 @@ h1 {
   margin: $font-size-h1 0 ($font-size-h1 * 0.8);
   color: $font-color-h1;
   font-size: $font-size-h1;
+  font-weight: normal;
   line-height: $font-size-h1 * 1.8;
 }
 
