refactor: クラス名の変更と定義位置変更

--- a/src/assets/styles/parts/_entry.scss
+++ b/src/assets/styles/parts/_entry.scss
@@ -21,3 +21,9 @@
     }
   }
 }
+
+.no-image {
+  background: $grey-50 50% no-repeat;
+  background-image: url('~@images/icon/photo.svg?fill=#{$grey-400} svg');
+  background-size: cover;
+}
